--- a/Soundcloud project.ipynb
+++ b/Soundcloud project.ipynb
@@ -6,7 +6,7 @@
    "id": "b7e85076",
    "metadata": {},
    "source": [
-    "# PROJECT 01 - Exploratory Data Analysis"
+    "# PROJECT 01 - Soundcloud Project"
    ]
   },
   {
